Fix broken css for media queries, now  mobile first css

--- a/src/index.css
+++ b/src/index.css
@@ -16,32 +16,47 @@
   /* font-size: 18px; */
 }
 
-form {
-  margin-top: 350px;
-}
+/* form {
+  margin-top: 35px;
+} */
 
 .card-front {
-  position: absolute;
-  top: 139px;
+  position: relative;
+  right: 1.5rem;
+  top: 9rem;
   z-index: 20;
   background: url('assets/bg-card-front.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 250px;
-  width: 450px;
-  border-radius: 10px;
+  height: 175px;
+  width: 315px;
+  border-radius: 7px;
 }
 .card-back {
-  position: absolute;
-  right: 6rem;
+  position: relative;
+  left: 1.5rem;
+  bottom: 8rem;
+  z-index: -1;
   background: url('assets/bg-card-back.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 250px;
-  width: 450px;
-  border-radius: 10px;
+  height: 175px;
+  width: 315px;
+  border-radius: 7px;
+}
+.cards-container {
+  margin: auto;
+}
+
+.cards-orientation {
+  width: 100vw;
+  @apply flex flex-col justify-center items-center;
+}
+
+.card-back p {
+  top: 4.9rem;
 }
 
 form label {
@@ -60,16 +75,31 @@ button {
   @apply py-3 px-6 rounded shadow text-white lg:text-lg;
 }
 
-@media (max-width: 768px) {
-  .card-front,
+@media (min-width: 1024px) {
   .card-back {
-    height: 175px;
-    width: 315px;
-    border-radius: 7px;
+    top: 1rem;
+    height: 225px;
+    width: 405px;
+    border-radius: 10px;
+  }
+
+  .card-front {
+    left: 1.5rem;
+    top: -1rem;
+    /* bottom: 20rem; */
+    height: 225px;
+    width: 405px;
+    border-radius: 10px;
   }
 
   .card-back p {
-    top: 4.9rem;
+    top: 6.2rem;
+  }
+
+  .cards-container {
+    @apply mt-10 mx-5;
+    /* align-self: center; */
+    margin: auto;
   }
 }
 
